refactor(parser): make error decomposition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(cppformat STATIC foreign/cppformat/format)
 
 add_library(${LIBRARY_NAME} SHARED
 	src/attribute
+	src/formatter/string/error
 	src/logger
 	src/record
 	src/root
