fix(cppformat): compile with PIC flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ include_directories(BEFORE SYSTEM
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 add_library(cppformat STATIC foreign/cppformat/format)
+set_target_properties(cppformat PROPERTIES
+	COMPILE_FLAGS "-fPIC")
 
 add_library(${LIBRARY_NAME} SHARED
 	src/attribute
