feat(config): make further decomposition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,9 @@ set_target_properties(cppformat PROPERTIES
 
 add_library(${LIBRARY_NAME} SHARED
 	src/attribute
-	src/config
+	src/config.cpp
+	src/config/monadic
+	src/config/none
 	src/datetime/generator.linux
 	src/datetime/generator.other
 	src/formatter/string.cpp
