refactor(attribute): change value interface
Encapsulated view's internal representation. The performance degradation on
view construction has been increased by 3-4 ns.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,7 @@ if (ENABLE_BENCHMARKING)
 	prepare_google_benchmarking()
 
 	add_executable(${LIBRARY_NAME}-benchmarks
+		bench/attribute
 		bench/clock
 		bench/cpp14formatter
 		bench/datetime
