refactor(config): make functional decomposition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,9 @@ add_library(${LIBRARY_NAME} SHARED
 	src/config/factory
 	src/config/json
 	src/config/monadic
+	src/config/node
 	src/config/none
+	src/config/option
 	src/datetime/generator.linux
 	src/datetime/generator.other
 	src/format
@@ -192,6 +194,7 @@ if (ENABLE_TESTING)
 		tests/attribute
 		tests/config/json
 		tests/config/none
+		tests/config/option
 		tests/datetime
 		tests/facade
 		tests/formatter/json
