refactor(scoped): divide and rename scoped context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(${LIBRARY_NAME} SHARED
 	src/formatter/string/parser
 	src/formatter/string/token
 	src/handler/blocking
+	src/keeper
 	src/logger
 	src/procname
 	src/record
