refactor(scope): hide boost::thread implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,13 +39,14 @@ add_library(${LIBRARY_NAME} SHARED
 	src/formatter/string/parser
 	src/formatter/string/token
 	src/handler/blocking
-	src/keeper
 	src/logger
 	src/procname
 	src/record
 	src/registry
 	src/root
-	src/scoped
+	src/scope/holder
+	src/scope/manager
+	src/scope/watcher
 	src/sink/console
 	src/sink/file
 	src/sink/null
