feat(): entirely hide rapidjson symbols
It is used only internally, so they must be hidden from the global
scope, but GCC exports them anyway, because of forced default
visibility for all templates within std namespace.

This commit applies custom symbol versioning mapping directly to the
linker eliminating all rapidjson symbols from the global scope.

Closes #78.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,9 @@ else ()
 		COMPILE_FLAGS "-Wswitch"
 		COMPILE_FLAGS "-Wunreachable-code"
 		COMPILE_FLAGS "-pedantic"
-		COMPILE_FLAGS "-pedantic-errors")
+		COMPILE_FLAGS "-pedantic-errors"
+		LINK_FLAGS -Wl,--version-script=${PROJECT_SOURCE_DIR}/libblackhole1.version
+	)
 endif ()
 
 target_link_libraries(${LIBRARY_NAME}
