feat(): add an owned record class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,6 +219,7 @@ if (ENABLE_TESTING)
 		tests/src/mocks/sink
 		tests/src/unit/cpp17/string_view
 		tests/src/unit/formatter/grammar
+		tests/src/unit/detail/record
 		tests/src/unit/formatter/json
 		tests/src/unit/formatter/token
 		tests/src/unit/sink/syslog
