--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,8 @@ if (ENABLE_TESTING)
 	prepare_google_testing()
 
 	include_directories(BEFORE SYSTEM
-		${PROJECT_SOURCE_DIR}/foreign/rapidjson/include)
+		${PROJECT_SOURCE_DIR}/foreign/rapidjson/include
+		${PROJECT_SOURCE_DIR}/foreign/libcds)
 
 	include_directories(
 		${PROJECT_SOURCE_DIR}/tests/include)
@@ -219,6 +220,7 @@ if (ENABLE_TESTING)
 		tests/src/mocks/sink
 		tests/src/unit/cpp17/string_view
 		tests/src/unit/formatter/grammar
+		tests/src/unit/detail/mpsc
 		tests/src/unit/detail/record
 		tests/src/unit/formatter/json
 		tests/src/unit/formatter/token
