refactor(): make major renaming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,7 +262,7 @@ if (ENABLE_BENCHMARKING)
 		bench/main
 		bench/queue
 		bench/record
-		bench/record.owned
+		bench/recordbuf
 		bench/system/thread
 	)
 
