refactor: make decomposition
- Add global forwards.
- Add experimental factory class.
- Split asynchronous sink into several files.
- Implement type method for asynchronous sink factory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(${LIBRARY_NAME} SHARED
 	src/logger
 	src/procname
 	src/record
+	src/sink/asynchronous
 	src/registry
 	src/root
 	src/scope/holder
