refactor: migrate null sink to new API
Also hide its implementation completely.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,7 +215,6 @@ if (ENABLE_TESTING)
 		tests/severity
 		tests/sink/console
 		tests/sink/file
-		tests/sink/null
 		tests/sink/udp
 		tests/src/mocks/formatter
 		tests/src/mocks/handler
@@ -228,6 +227,7 @@ if (ENABLE_TESTING)
 		tests/src/unit/formatter/json
 		tests/src/unit/formatter/token
 		tests/src/unit/sink/asynchronous
+		tests/src/unit/sink/null
 		tests/src/unit/sink/syslog
 		tests/src/unit/sink/tcp
 		tests/wrapper
